--- a/package.json
+++ b/package.json
@@ -12,21 +12,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "concurrently": "^7.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "framer-motion": "^7.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
     "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
-    "swiper": "^8.4.2",
     "react-slick": "^0.29.0",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.2",
@@ -55,5 +52,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.0",
+    "nodemon": "^3.1.10"
   }
 }
